# crustacean_pacman

./: .gitignore  Cargo.toml  dev-build.sh  dev_dots.csv  generate_node_csv.sh  log.txt
assets/: dots.csv  dots.txt  nodes.csv  nodes.txt  old_nodes.csv
assets/dev/: get_nodes.py  nodes.csv  pacman.xml  typography.xcf
assets/dev/nodes/: get_dots.py  get_nodes.py  get_nodes_v2.py
assets/dev/xcf/: board.xcf  sprite_sheet.xcf
assets/xcf/: board.xcf
dev/: dots.csv  pacman.xml
dev/nodes/: dots.csv  get_dots.py  get_nodes.py  get_nodes_v2.py  node.py  vector.py
src/: app.rs  controls.rs  dots.rs  entity.rs  main.rs  map.rs  mov.rs  render.rs  sprite.rs  text_render.rs
src/ai/: mod.rs
src/render/: mod.rs  text.rs  trait.rs  traits.rs
